--- a/AndroidClient/Hypechat/app/src/main/res/layout/their_message.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/their_message.xml
@@ -30,7 +30,7 @@
         android:paddingHorizontal="16dp"
         android:elevation="2dp"
         android:textSize="18sp"
-        android:text="How are you doing? This is a long message that should probably wrap."
+        android:text="Sample"
         android:layout_alignStart="@+id/tm_name" />
 
 
