--- a/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
@@ -13,6 +13,7 @@
     <item
         android:id="@+id/action_about_channel"
         android:orderInCategory="200"
+        android:visible="false"
         android:title="@string/action_about_channel"
         app:showAsAction="never" />
 
