--- a/AndroidClient/Hypechat/app/src/main/res/layout/my_message.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/my_message.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="10dp"
-    android:paddingRight="15dp"
-    android:paddingLeft="60dp"
+    android:paddingRight="10dp"
+    android:paddingLeft="50dp"
     android:clipToPadding="false">
 
     <TextView
@@ -18,18 +18,18 @@
         android:elevation="2dp"
         android:textSize="18sp"
         android:layout_alignParentRight="true"
-        android:text="Placeholder message"
+        android:text="Ejemplo de texto bien largo para ver si el tamaño deseado del problema"
         android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/m_time"
         android:layout_toLeftOf="@+id/m_message_body"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="5dp"
         android:layout_alignBottom="@+id/m_message_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="17:15"
-        android:layout_marginEnd="10dp"
+        android:text="17:15:00"
+        android:layout_marginEnd="5dp"
         android:layout_toStartOf="@+id/m_message_body" />
 
 
