--- a/AndroidClient/Hypechat/app/src/main/res/layout/their_message.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/their_message.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
         android:text="Rose"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="5dp"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -30,7 +30,7 @@
         android:paddingHorizontal="16dp"
         android:elevation="2dp"
         android:textSize="18sp"
-        android:text="Sample"
+        android:text="Ejemplo de texto bien largo para ver si el tamaño deseado del problema"
         android:layout_alignStart="@+id/tm_name" />
 
 
@@ -40,8 +40,8 @@
         android:layout_marginLeft="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="17:15"
-        android:layout_marginStart="15dp"
+        android:text="17:15:00"
+        android:layout_marginStart="5dp"
         android:layout_alignBottom="@+id/tm_message_body"
         android:layout_toEndOf="@+id/tm_message_body" />
 </RelativeLayout>
