--- a/AndroidClient/Hypechat/app/src/main/res/layout/my_message_image.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/my_message_image.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:id="@+id/m_message_body"
         android:background="@drawable/my_message"
         android:textColor="#fff"
