--- a/AndroidClient/Hypechat/app/src/main/res/layout/fragment_chat_channel.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/fragment_chat_channel.xml
@@ -35,6 +35,7 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingActionButton_add_user"
             android:layout_width="wrap_content"
+            app:fabSize="mini"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
