--- a/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
@@ -11,6 +11,13 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_map"
+        android:orderInCategory="150"
+        android:visible="false"
+        android:title="@string/action_map"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_bots"
         android:orderInCategory="200"
         android:visible="false"
